k8s/bastille/privatebin/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: privatebin
  namespace: privatebin
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`privatebin.dcnt.company`)
      kind: Rule
      priority: 0
      services:
        - name: privatebin
          port: 8080
      middlewares:
        - name: default-headers
          namespace: authentik
  tls:
    secretName: dcnt-company-tls
